# smp-mdk-lgcy

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac
data/: config.yml  counters.yml  network.yml  run-sim.sh  simulate-counters.sh  simulate-network.sh
data/examples/: README.md
data/examples/counters/: README.md  config.yml
data/examples/counters_rpc/: README.md  config.yml  requirements.txt  reset_counter1.py  run-sim.sh
data/examples/network/: README.md  config.yml  run-sim.sh
doc/: .gitignore  README.md
doc/diagrams/: uml.drawio
examples/: CMakeLists.txt  README.md
examples/counter/: CMakeLists.txt  Counter.cpp  Counter.h  main.cpp
examples/hello_world/: CMakeLists.txt  main.cpp
examples/managed_counter/: CMakeLists.txt  CounterClass.cpp  ManagedCounter.cpp  ManagedCounter.h  README.md  main.cpp
libsmp2/: CMakeLists.txt  IYAMLConfigurable.h  README.md
libsmp2/Mdk/: Aggregate.cpp  Aggregate.h  AnySimple.cpp  AnySimple.h  Component.h  Composite.cpp  Container.h  DateTime.cpp  Duration.cpp  Duration.h  EntryPoint.h  Model.cpp  Model.h  SimpleTypes.h  String.h
libsmp2/Mdk/Management/: EntryPointPublisher.h  EventConsumer.cpp  EventConsumer.h  EventProvider.cpp  ManagedComponent.cpp  ManagedComponent.h  ManagedContainer.h  ManagedReference.h
libsmp2/Smp/: IComponent.h  IComposite.h  IDynamicInvocation.h  IEntryPoint.h  IEventSource.h  IModel.h  IPublication.h  IReference.h  IRequest.h  IService.h  ISimulator.h  Platform.h  Simulator.cpp  Simulator.h
libsmp2/Smp/Management/: IEventProvider.h  IManagedReference.h
libsmp2/Smp/Publication/: IClassType.h  IPublishOperation.h  IType.h  ITypeRegistry.h  Publication.cpp  Publication.h
libsmp2/Smp/Services/: EventManager.cpp  EventManager.h  IEventManager.h  ILogger.h  IResolver.h  IScheduler.h  Logger.cpp  Resolver.cpp  Resolver.h  Scheduler.cpp  Scheduler.h  Service.h  TimeKeeper.h
models/: CMakeLists.txt  README.md
models/counter/: CMakeLists.txt  Counter.cpp  Counter.h  CounterClass.h  README.md  main.cpp
models/counter_rpc/: CMakeLists.txt  CounterRPC.cpp  CounterRPC.h  CounterResetRequest.cpp  CounterResetRequest.h  README.md
models/network/: Bus.cpp  Bus.h  CMakeLists.txt  Message.h  Network.cpp  Network.h  Node.cpp  Node.h  README.md
simulator/: CMakeLists.txt  DynamicLoader.cpp  DynamicLoader.h  README.md  SimulatorService.cpp  SimulatorService.h  main.cpp
simulator/rpc/: jsonrpc_request_handler_base.hpp  jsonrpc_server.hpp
simulator/rpc/transport/: rpc_transport_base.hpp
simulator/rpc/transport/implementation/: zmq_reqrep_transport.hpp
smp2/Smp/: Exceptions.h  IAggregate.h  IDynamicInvocation.h  IDynamicSimulator.h  IEventSink.h  IEventSource.h  IFactory.h  IModel.h  IObject.h  IPersist.h  IPublication.h  Platform.h  SimpleTypes.h
smp2/Smp/Management/: IManagedComponent.h  IManagedReference.h
smp2/Smp/Publication/: IPublishOperation.h  IStructureType.h
smp2/Smp/Services/: ITimeKeeper.h
smp2client/: __init__.py
src/: CMakeLists.txt  Makefile.am
src/Mdk/: Aggregate.cpp  Aggregate.h  AnySimple.cpp  AnySimple.h  Array.h  Component.cpp  Component.h  Composite.cpp  Composite.h  Container.h  DateTime.h  Duration.cpp  EntryPoint.h  EventSink.h  EventSource.h  Factory.h  Invocator.h  Makefile  Model.cpp  Model.h  Object.cpp  Object.h  ObjectImpl.cpp  ObjectImpl.h  ObjectImplForward.h  Reference.h  Request.h  SimpleTypes.h  String.h  Uuid.cpp  Uuid.h
src/Mdk/.deps/: Object.Tpo
src/Mdk/Management/: EntryPointPublisher.cpp  EntryPointPublisher.h  EventConsumer.cpp  EventConsumer.h  EventProvider.cpp  EventProvider.h  Makefile  ManagedComponent.cpp  ManagedComponent.h  ManagedContainer.h  ManagedModel.h  ManagedObject.cpp  ManagedObject.h  ManagedReference.h
src/Smp/: Exceptions.h  IContainer.h  IDynamicSimulator.h  IEventSource.h  IRequest.h  ISimulator.h  Simulator.cpp  Simulator.h
src/Smp/Management/: IEntryPointPublisher.h  IEventConsumer.h  IManagedContainer.h  IManagedModel.h  IManagedObject.h
src/Smp/Publication/: IEnumerationType.h  ITypeRegistry.h  Publication.h
src/Smp/Services/: EventManager.cpp  EventManager.h  IEventManager.h  IScheduler.h  Logger.cpp  Logger.h  Resolver.cpp  Resolver.h  Scheduler.cpp  Scheduler.h  Service.cpp  Service.h  TimeKeeper.cpp  TimeKeeper.h
tests/: ArrayTest.cpp  BaseTest.h  CMakeLists.txt  ComponentTest.h  CompositeTest.cpp  CompositeTest.h  ContainerTest.h  EntryPointTest.cpp  EntryPointTest.h  EventsTest.cpp  EventsTest.h  Makefile.am  ManagedContainerTest.cpp  ManagedContainerTest.h  ModelTest.h  ObjectTest.cpp  ObjectTest.h  ReferenceTest.h  StringTest.cpp  StringTest.h  TestRunner.cpp  UuidTest.cpp  UuidTest.h
tests/legacy/: ArrayTest.h  ComponentTest.cpp  CompositeTest.cpp  ContainerTest.cpp  EntryPointTest.cpp  EntryPointTest.h  EventSinkTest.cpp  EventSinkTest.h  Makefile.am  ManagedContainerTest.h  ManagedReferenceTest.cpp  ManagedReferenceTest.h  ModelTest.cpp  ObjectTest.cpp  ReferenceTest.cpp  UuidTest.cpp
